force-app/main/default/objects/adobesign__Object_Field_Mapping_Entry__c/fields/adobesign__Document_Tag__c.field-meta.xml
<CustomField>
    <fullName>adobesign__Document_Tag__c</fullName>
    <label>Document Tag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>