force-app/main/default/objects/adobesign__Object_Field_Mapping_Entry__c/fields/adobesign__Full_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>adobesign__Full_Api_Name__c</fullName>
    <label>Full Api Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>