force-app/main/default/objects/adobesign__Object_Field_Mapping_Entry__c/fields/adobesign__Object_Field_Mapping__c.field-meta.xml
<CustomField>
    <fullName>adobesign__Object_Field_Mapping__c</fullName>
    <label>Object Field Mappings</label>
    <referenceTo>adobesign__Object_Field_Mapping__c</referenceTo>
    <relationshipName>Object_Field_Child_Mappings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>